# logistics

./: .gitignore  README.md
apps/agent-server/: README.md  pyproject.toml
apps/agent-server/src/app/: __init__.py  main.py
apps/agent-server/src/app/agents/: __init__.py  root_agent.py  workflows.py
apps/agent-server/src/app/api/: __init__.py  routes.py
apps/agent-server/src/app/domain/: __init__.py  models.py
apps/agent-server/src/app/mock_gateway/: __init__.py  catalog.py
apps/agent-server/src/app/observability/: __init__.py  trace.py
apps/agent-server/src/app/services/: __init__.py  planner.py
apps/agent-server/src/app/tools/: __init__.py  logistics_tools.py
apps/agent-server/tests/: test_chat_api.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/api/: client.ts
apps/web/src/components/cards/: ActionListCard.tsx  CardRenderer.tsx  ConfirmationCard.tsx  PriceTableCard.tsx  RecentOrdersCard.tsx  ShipmentSummaryCard.tsx  TrackTimelineCard.tsx
apps/web/src/components/chat/: ChatThread.tsx  Composer.tsx  MessageBubble.tsx
apps/web/src/components/trace/: TraceStepCard.tsx  (+1 more)
apps/web/src/hooks/: useChatSession.ts
apps/web/src/pages/: WorkbenchPage.tsx
apps/web/src/styles/: app.css
apps/web/src/types/: contracts.ts
apps/web/src/utils/: display.ts  storage.ts
contracts/: chat-api.schema.json  conversation-response.example.json
docs/: frontend-handoff.md
docs/adr/: 0001-adk-as-core.md  0002-offline-deterministic-planner.md  0003-workflow-first-orchestration.md
(+5 files in other folders)
